package com.diguage.didp.abstract-factory;

/**
 * Client 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-16
 */
public class Client {
  public static void main(String[] args) {
  }
}

