package com.diguage.didp.chainofresponsibility;

/**
 * ConcreteHandler1 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-19 17:53:33
 */
public class ConcreteHandler1 extends Handler {
  public Object handleRequest(int request) {
  }
}
